blurred image problem fixed

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,3 +1,11 @@
+.image{
+  position:static;
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
 .normal-text {
   font-size: 1.3rem;
 }
@@ -48,14 +56,18 @@
   min-width: 33.6%;
   height: auto;
 }
-.top-products-image-div1 {
+.first-image {
   min-width: 100%;
   min-height: 49%;
+}
+.top-products-image-div1 {
   cursor: pointer;
+  /* width: 100%;
+  height: 100%; */
 }
 .top-products-image-div2 {
   min-width: 100%;
-  min-height: 32%;
+  max-height: 32.5%;
   cursor: pointer;
 }
 /* ----BlogsList---- */
@@ -84,7 +96,7 @@
 .image-with-text {
   min-width: max-content;
   min-height: 70%;
-  height: auto;
+  /* height: auto; */
 }
 .text-with-img {
   min-height: 30%;
